native/tests/snapshots/parse_tests__outline_go.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 7,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 8,
                end_byte: 12,
                kind: "namespace",
            },
        ],
        [],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 4,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 5,
                end_byte: 9,
                kind: "function",
            },
        ],
        [
            HighlightToken {
                start_byte: 4,
                end_byte: 11,
                kind: "function.builtin",
            },
            HighlightToken {
                start_byte: 12,
                end_byte: 19,
                kind: "string",
            },
        ],
        [],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "package_clause",
            name: "",
            detail: "",
            start_byte: 0,
            end_byte: 12,
            children: [],
        },
        OutlineNode {
            kind: "function_declaration",
            name: "main",
            detail: "",
            start_byte: 14,
            end_byte: 50,
            children: [],
        },
    ],
}
