native/tests/snapshots/parse_tests__outline_java.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 6,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 7,
                end_byte: 12,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 13,
                end_byte: 17,
                kind: "type",
            },
        ],
        [
            HighlightToken {
                start_byte: 4,
                end_byte: 10,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 11,
                end_byte: 17,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 18,
                end_byte: 22,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 23,
                end_byte: 27,
                kind: "function",
            },
            HighlightToken {
                start_byte: 28,
                end_byte: 34,
                kind: "type",
            },
            HighlightToken {
                start_byte: 37,
                end_byte: 41,
                kind: "variable",
            },
        ],
        [],
        [],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "class_declaration",
            name: "Main",
            detail: "",
            start_byte: 0,
            end_byte: 72,
            children: [
                OutlineNode {
                    kind: "method_declaration",
                    name: "main",
                    detail: "",
                    start_byte: 24,
                    end_byte: 70,
                    children: [],
                },
            ],
        },
    ],
}
