native/tests/snapshots/parse_tests__parse_bash.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 14,
                kind: "comment",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 4,
                kind: "function",
            },
            HighlightToken {
                start_byte: 5,
                end_byte: 7,
                kind: "identifier",
            },
        ],
        [],
    ],
    outline: [],
}
