native/tests/snapshots/parse_tests__parse_c.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 8,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 0,
                end_byte: 19,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 9,
                end_byte: 18,
                kind: "string",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 3,
                kind: "type",
            },
            HighlightToken {
                start_byte: 4,
                end_byte: 8,
                kind: "function",
            },
            HighlightToken {
                start_byte: 13,
                end_byte: 28,
                kind: "comment",
            },
            HighlightToken {
                start_byte: 29,
                end_byte: 32,
                kind: "type",
            },
            HighlightToken {
                start_byte: 33,
                end_byte: 34,
                kind: "identifier",
            },
            HighlightToken {
                start_byte: 37,
                end_byte: 38,
                kind: "number",
            },
            HighlightToken {
                start_byte: 40,
                end_byte: 46,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 47,
                end_byte: 48,
                kind: "number",
            },
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "function_definition",
            name: "",
            detail: "",
            start_byte: 19,
            end_byte: 70,
            children: [],
        },
    ],
}
