native/tests/snapshots/parse_tests__parse_cjs.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 14,
                kind: "comment",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 6,
                kind: "identifier",
            },
            HighlightToken {
                start_byte: 6,
                end_byte: 7,
                kind: "operator",
            },
            HighlightToken {
                start_byte: 7,
                end_byte: 14,
                kind: "property",
            },
            HighlightToken {
                start_byte: 15,
                end_byte: 16,
                kind: "operator",
            },
            HighlightToken {
                start_byte: 17,
                end_byte: 18,
                kind: "number",
            },
            HighlightToken {
                start_byte: 18,
                end_byte: 19,
                kind: "operator",
            },
        ],
        [],
    ],
    outline: [],
}
