native/tests/snapshots/parse_tests__parse_cs.snap
---
source: tests/parse_tests.rs
expression: result
---
CodeParseResult {
    highlights_by_line: [
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 13,
                kind: "comment",
            },
        ],
        [
            HighlightToken {
                start_byte: 0,
                end_byte: 5,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 6,
                end_byte: 7,
                kind: "type",
            },
            HighlightToken {
                start_byte: 8,
                end_byte: 9,
                kind: "punctuation",
            },
            HighlightToken {
                start_byte: 10,
                end_byte: 13,
                kind: "type",
            },
            HighlightToken {
                start_byte: 14,
                end_byte: 15,
                kind: "function",
            },
            HighlightToken {
                start_byte: 15,
                end_byte: 16,
                kind: "punctuation",
            },
            HighlightToken {
                start_byte: 16,
                end_byte: 17,
                kind: "punctuation",
            },
            HighlightToken {
                start_byte: 18,
                end_byte: 19,
                kind: "punctuation",
            },
            HighlightToken {
                start_byte: 20,
                end_byte: 26,
                kind: "keyword",
            },
            HighlightToken {
                start_byte: 27,
                end_byte: 28,
                kind: "number",
            },
            HighlightToken {
                start_byte: 28,
                end_byte: 29,
                kind: "punctuation",
            },
            HighlightToken {
                start_byte: 30,
                end_byte: 31,
                kind: "punctuation",
            },
            HighlightToken {
                start_byte: 32,
                end_byte: 33,
                kind: "punctuation",
            },
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "class_declaration",
            name: "C",
            detail: "",
            start_byte: 14,
            end_byte: 47,
            children: [
                OutlineNode {
                    kind: "method_declaration",
                    name: "M",
                    detail: "",
                    start_byte: 24,
                    end_byte: 45,
                    children: [],
                },
            ],
        },
    ],
}
